Ldap add. Refactoring, and documentation updates.